@@ -3,12 +3,13 @@ Revision history for DBIx::Class
     * Fixes
         - Work around breakage in Hash::Merge by soft-requiring Clone as part
           of the replicated subsystem (RT#124321)
+        - Automatically detect and use multi-column IN on recent versions of
+          libsqlite: ... WHERE ( foo, bar ) IN ( SELECT foo, bar FROM ... )
 
     * Misc
         - DBIC_TRACE_PROFILE=... now uses a ::Storage::Statistics subclass
           DBIx::Class::Storage::Debug::PrettyTrace which properly ships as a
           part of this distrinbution
-
 
 0.082841 2018-01-29 08:10 (UTC)
     * Test-suite fixup changes only - no reason to upgrade, wait for 0.082850
